--- a/index.html
+++ b/index.html
@@ -35,10 +35,23 @@
          git checkout nazwabranchu - przełączanie się między branchami
 
          git merge nazwa brancha z którym chę połączyć - łączenie do głównego 
+
+         git remote -v - linki do repo
+
+         git clone link do repo
      -->
+
+     <!-- 
+        git init
+
+        git add .
+
+        git commit -m "added"
+      -->
      <h1>test</h1>
     </div>
 </body>
     <h1>cześć - sprawdzam gita</h1>
     <p>zmiana na mastera</p>
+    <p>testuje branch</p>
 </html>
